k8s/applications/infrastructure/traefik-forward-auth/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik-forward-auth
  namespace: kube-system
spec:
  selector:
    matchLabels:
      app: traefik-forward-auth
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: traefik-forward-auth
    spec:
      containers:
        - name: traefik-forward-auth
          image: thomseddon/traefik-forward-auth:2
          ports:
          - containerPort: 4181
            protocol: TCP
            name: http
          resources:
            requests:
              memory: "100Mi"
              cpu: "10m"
            limits:
              memory: "100Mi"
              cpu: "50m"
