k8s/applications/infrastructure/traefik-forward-auth/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http-prod
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-traefik-forward-auth@kubernetescrd
  name: forward-auth
spec:
  rules:
  - host: auth.net.theleachfamily.me.uk
    http: 
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: traefik-forward-auth
            port:
              name: http
  tls:
  - hosts:
    - auth.net.theleachfamily.me.uk
    secretName: forward-auth-cert
